unpackaged/main/default/objects/TransactionalEmail__c/TransactionalEmail__c.object-meta.xml
<CustomObject>
    <label>Transactional Email</label>
    <nameField>
        <displayFormat>TE-{0000}</displayFormat>
        <label>Transactional Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactional Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>