unpackaged/main/default/objects/TransactionalEmail__c/fields/bccEmail__c.field-meta.xml
<CustomField>
    <fullName>bccEmail__c</fullName>
    <label>bcc email</label>
    <length>120</length>
    <type>Text</type>
</CustomField>