unpackaged/main/default/objects/TransactionalEmail__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactional Emails</relationshipLabel>
    <relationshipName>Transactional_Emails</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>