unpackaged/main/default/objects/TransactionalEmail__c/fields/contact_key__c.field-meta.xml
<CustomField>
    <fullName>contact_key__c</fullName>
    <formula>CASESAFEID(Client__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>contact key</label>
    <type>Text</type>
</CustomField>