unpackaged/main/default/objects/TransactionalEmail__c/fields/CountrySite__c.field-meta.xml
<CustomField>
    <fullName>CountrySite__c</fullName>
    <label>Country Site</label>
    <length>100</length>
    <type>Text</type>
</CustomField>