unpackaged/main/default/objects/TransactionalEmail__c/fields/EmailContent__c.field-meta.xml
<CustomField>
    <fullName>EmailContent__c</fullName>
    <label>Email Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>