unpackaged/main/default/objects/TransactionalEmail__c/fields/LanguageSite__c.field-meta.xml
<CustomField>
    <fullName>LanguageSite__c</fullName>
    <label>Language Site</label>
    <length>25</length>
    <type>Text</type>
</CustomField>