unpackaged/main/default/objects/TransactionalEmail__c/fields/OrderSummary__c.field-meta.xml
<CustomField>
    <fullName>OrderSummary__c</fullName>
    <label>Order Summary</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>Transactional Emails</relationshipLabel>
    <relationshipName>TransactionalEmails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>