unpackaged/main/default/objects/TransactionalEmail__c/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <formula>IF(OrderSummary__r.SalesChannel.SalesChannelName = &quot;CEGID&quot;, &quot;StoreToWeb&quot;,  
				IF(AND(OrderSummary__r.SalesChannel.SalesChannelName = &quot;Rimowa&quot;,OrderSummary__r.tech_os_store_shipping_method__c &gt; 0), &quot;C&amp;C&quot;, &quot;Ecom&quot;))
							/*IF(OR(AND(OrderSummary__r.SalesChannel.SalesChannelName = &quot;Rimowa&quot;,OrderSummary__r.tech_os_store_shipping_method__c = 0),
													OrderSummary__r.SalesChannel.SalesChannelName = &quot;Manual Order&quot;) ,&quot;Ecom&quot;,&quot;&quot;) ) )*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Type</label>
    <type>Text</type>
</CustomField>