unpackaged/main/default/objects/TransactionalEmail__c/fields/TECH_CustomerKey__c.field-meta.xml
<CustomField>
    <fullName>TECH_CustomerKey__c</fullName>
    <label>TECH_CustomerKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>