unpackaged/main/default/objects/TransactionalEmail__c/fields/TECH_GenerateInvoice__c.field-meta.xml
<CustomField>
    <fullName>TECH_GenerateInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_GenerateInvoice</label>
    <type>Checkbox</type>
</CustomField>