unpackaged/main/default/objects/TransactionalEmail__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ShipmentConfirmation</fullName>
                <label>Shipment Confirmation</label>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>OrderCreated</fullName>
                <label>Order Created</label>
            </value>
            <value>
                <fullName>ReturnReceived</fullName>
                <label>Return Received</label>
            </value>
            <value>
                <fullName>OrderReadyForPickup</fullName>
                <label>Order Ready For Pick-up</label>
            </value>
            <value>
                <fullName>ReturnCreated</fullName>
                <label>Return Request</label>
            </value>
            <value>
                <fullName>RefundConfirmation</fullName>
                <label>Refund (with Credit Memo)</label>
            </value>
            <value>
                <fullName>RefundValidationMissingProduct</fullName>
                <label>Refund (without Credit Memo)</label>
            </value>
            <value>
                <fullName>OrderCanceled</fullName>
                <label>Order Canceled</label>
            </value>
            <value>
                <fullName>CCAutomaticOrderCancellation</fullName>
                <label>CC Automatic  Order Cancellation</label>
            </value>
            <value>
                <fullName>CCReminder</fullName>
                <label>CC Reminder</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>