unpackaged/main/default/objects/TransactionalEmail__c/fields/test_ContactKey__c.field-meta.xml
<CustomField>
    <fullName>test_ContactKey__c</fullName>
    <formula>CASESAFEID(Client__r.PersonContact.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test_ContactKey</label>
    <type>Text</type>
</CustomField>