unpackaged/main/default/objects/TransactionalEmail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Status__c</columns>
    <columns>Template__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template__c</field>
        <operation>equals</operation>
        <value>Invoice,OrderCreated,ReturnReceived,OrderReadyForPickup,ReturnCreated,RefundConfirmation,RefundValidationMissingProduct</value>
    </filters>
    <label>All</label>
</ListView>