unpackaged/main/default/objects/TransactionalEmail__c/listViews/Click_Collect.listView-meta.xml
<ListView>
    <fullName>Click_Collect</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Status__c</columns>
    <columns>LanguageSite__c</columns>
    <columns>CountrySite__c</columns>
    <columns>Template__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template__c</field>
        <operation>equals</operation>
        <value>OrderReadyForPickup</value>
    </filters>
    <label>Click&amp;Collect</label>
</ListView>