unpackaged/main/default/objects/TransactionalEmail__c/listViews/Order_Confirmation.listView-meta.xml
<ListView>
    <fullName>Order_Confirmation</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Status__c</columns>
    <columns>LanguageSite__c</columns>
    <columns>CountrySite__c</columns>
    <columns>Template__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template__c</field>
        <operation>equals</operation>
        <value>OrderCreated</value>
    </filters>
    <label>Order Confirmation</label>
</ListView>