unpackaged/main/default/objects/TransactionalEmail__c/listViews/Refund_Missing_Product.listView-meta.xml
<ListView>
    <fullName>Refund_Missing_Product</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>LanguageSite__c</columns>
    <columns>CountrySite__c</columns>
    <columns>Template__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template__c</field>
        <operation>equals</operation>
        <value>RefundValidationMissingProduct</value>
    </filters>
    <label>Refund Missing Product</label>
</ListView>