unpackaged/main/default/objects/TransactionalEmail__c/listViews/RefundConfirmation.listView-meta.xml
<ListView>
    <fullName>RefundConfirmation</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Status__c</columns>
    <columns>LanguageSite__c</columns>
    <columns>CountrySite__c</columns>
    <columns>Template__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template__c</field>
        <operation>equals</operation>
        <value>RefundConfirmation</value>
    </filters>
    <label>Refund Confirmation</label>
</ListView>